--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ opencv-python = "^4.10.0.84"
 matplotlib = "^3.9.2"
 pyserial = "^3.5"
 
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.7.3"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
